RESOLVED FIXED62830
[wx] Fix for bitmaps on PPC arch
https://bugs.webkit.org/show_bug.cgi?id=62830
Summary [wx] Fix for bitmaps on PPC arch
Robin Dunn
Reported 2011-06-16 15:53:20 PDT
Created attachment 97515 [details] PPC arch fix patch Account for differing byte order when decoding images in the PPC build
Attachments
PPC arch fix patch (1.67 KB, patch)
2011-06-16 15:53 PDT, Robin Dunn
kevino: review+
kevino: commit-queue-
Alexey Proskuryakov
Comment 1 2011-06-16 16:36:39 PDT
Please see <http://www.webkit.org/coding/contributing.html> for information about contributing code to WebKit. A patch that's not marked for review is unlikely to be noticed.
Kevin Ollivier
Comment 2 2011-06-16 22:14:29 PDT
Landed in r89115, thanks!
Note You need to log in before you can comment on or make changes to this bug.