Reviewed by Kevin Ollivier.

[wx] Account for differing byte order when decoding images in the PPC build.

https://bugs.webkit.org/show_bug.cgi?id=62830


Canonical link: https://commits.webkit.org/78444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89115 268f45cc-cd09-0410-ab3c-d52691b4dbfc